# web_archiver

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml
archive_indexer/: Cargo.toml
archive_indexer/src/: lib.rs  main.rs
archive_indexer/tests/: run.rs
archive_migrator/: Cargo.toml
archive_migrator/src/: lib.rs  main.rs
bins/: csv.rs  indexer.rs
common/: Cargo.toml
common/src/: balanced_archiver.rs  compressed_string.rs  full_path_archiver.rs  historical.rs  historical_archiver.rs  lib.rs  markdown.rs  page.rs  reqwest_ext.rs  settings.rs  types.rs  url.rs
common/src/archiver/: balanced_archiver.rs  full_path_archiver.rs  historical_archiver.rs  mod.rs
common/src/json_ld/: mod.rs
crawler/: Cargo.toml
crawler/src/: main.rs
crawler/src/frontier/: frontier_manager.rs
crawler/src/frontier/db/: frontier.rs  schema.rs
crawler/tests/: frontier_manager.rs
docs/: applications.md  architecture.md  pipeline.md
hybrid_search/: Cargo.toml
hybrid_search/src/: main.rs  search.rs  settings.rs
legacy_converter/: Cargo.toml
legacy_converter/src/: lib.rs  main.rs  weird.rs
memories/session/: plan-rebuildArchive.prompt.md
rebuild_archive/: Cargo.toml
rebuild_archive/src/: aggregator.rs  archive_reader.rs  extracted_page.rs  historical_serializer.rs  lib.rs  main.rs  multi_page_merger.rs  settings.rs  url_utils.rs
src/: lib.rs  main.rs
src/config/: settings.rs
src/extractor/: parser.rs
src/fetcher/: worker.rs
src/frontier/: frontier_manager.rs
src/frontier/db/: frontier.rs  mod.rs  schema.rs
src/storage/: archive.rs
src/types/: messages.rs
src/util/: markdown.rs  url.rs
tests/: frontier_db.rs  frontier_manager.rs
vector_common/: Cargo.toml
vector_common/src/: candle_bert.rs  lib.rs
vector_indexer/: Cargo.toml
vector_indexer/src/: chunk_markdown.rs  lib.rs  main.rs  settings.rs  vector_db.rs
web_archiver/: Cargo.toml  test.json
web_archiver/src/: lib.rs  main.rs  settings.rs  system.rs
web_archiver/src/config/: settings.rs
web_archiver/src/extractor/: mod.rs  parser.rs  router.rs
web_archiver/src/fetcher/: worker.rs
web_archiver/src/frontier/: frontier_manager.rs  mod.rs
web_archiver/src/frontier/db/: frontier.rs  schema.rs
web_archiver/src/storage/: archive.rs  mod.rs
web_archiver/src/util/: mod.rs
web_archiver/tests/: frontier_db.rs  frontier_manager.rs
weeklore/: Cargo.toml
weeklore/src/: chunk.rs  fetch.rs  main.rs  models.rs  pipeline.rs
weeklore/src/llm/: classify.rs  client.rs  mod.rs  prompt.rs  retry.rs  validate.rs
weeklore/src/prompts/: chunk.txt  classify.txt  classify_suggest.txt  executive.txt  executive_brief.txt  reduce.txt
