[package]
name = "archive_indexer"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true}
indicatif = { workspace = true }                    # A progress bar and cli reporting library for Rust

[dependencies.common]
path = "../common"

[dev-dependencies]
tempfile = { workspace = true }
itertools = { workspace = true }

[lints]
clippy = { too_many_arguments = "warn", too_many_lines = "warn" }
