[package]
name = "archive_migrator"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dependencies.common]
path = "../common"
