[package]
name = "archive_migrator"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dependencies.common]
path = "../common"

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
