[package]
name = "common"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
mockall = { workspace = true }
blake3 = { workspace = true }
html2md = { workspace = true }
readability = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
rusqlite = { workspace = true }

simhash = { workspace = true }
oxidelta = { workspace = true }
base64 = { workspace = true }
zstd = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = "0.7"
reqwest = { workspace = true, features = ["stream"] }
tracing-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }