[package]
name = "web_archiver"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "gzip","brotli","deflate"] }
scraper = "0.25"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
lru = "0.16"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.44"
html2md = "0.2"
readability = "0.3"
csv = "1.2"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tempfile = "3.27.0"
robotstxt = "0.3"
map-macro = "0.3.0"
lazy_static = "1.5.0"


[dependencies.common]
path = "../common"
