[package]
name = "hybrid_search"
version = "0.1.0"
edition = "2021"

[dependencies]
qdrant-client = {workspace = true }
tokio = { workspace = true }
anyhow = {workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mockall = { workspace = true }

[dependencies.common]
path = "../common"

[dependencies.vector-common]
path = "../vector_common"
