[package]
name = "rebuild_archive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }                    # A progress bar and cli reporting library for Rust
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
figment = { workspace = true }
url = { workspace = true }

itertools = "0.14.0"              # Extra iterator adaptors, iterator methods, free functions, and macros.

[dependencies.common]
path = "../common"
features = []