[package]
name = "vector_indexer"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"]}
uuid = { workspace = true }
qdrant-client = { workspace = true }
tokenizers = { workspace = true }
walkdir = "2.5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
map-macro = { workspace = true }
mockall = { workspace = true }

[dependencies.common]
path = "../common"

[dependencies.vector-common]
path = "../vector_common"

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }

[lints]
clippy = { too_many_arguments = "warn", too_many_lines = "warn" }

