[package]
name = "vector_indexer"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"]}
uuid = { workspace = true }
fastembed = "5.13.2"
qdrant-client = { workspace = true }
tokenizers = { workspace = true }
walkdir = "2.5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
map-macro = { workspace = true }

[dependencies.common]
path = "../common"

[dependencies.ort]
version = "2.0.0-rc.11"
default-features = false
features = ["load-dynamic"]
