[package]
name = "web_archiver"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
html2md = { workspace = true }
lazy_static = { workspace = true }
map-macro = { workspace = true }
readability = { workspace = true }
reqwest = { workspace = true }
robotstxt = { workspace = true }
scraper = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
figment = {version = "0.10.19", features = ["yaml"]}

[dependencies.common]
path = "../common"

[dev-dependencies]
mockall = { workspace = true }
