[package]
name = "weeklore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dependencies.common]
path = "../common"

[dev-dependencies]
tracing-test = { workspace = true }
wiremock = { workspace = true }

[lints]
clippy = { too_many_arguments = "warn", too_many_lines = "warn" }
